library/policies/uniqueserviceselectorconstraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sUniqueServiceSelector
metadata:
  name: unique-service-selector
  labels:
    owner: admin.agilebank.demo
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
